After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 744165 - telepathy: "use this account for external calls" checkbox is not working
telepathy: "use this account for external calls" checkbox is not working
Status: RESOLVED FIXED
Product: gnome-online-accounts
Classification: Core
Component: Telepathy
3.14.x
Other All
: Normal normal
: ---
Assigned To: GNOME Online Accounts maintainer(s)
GNOME Online Accounts maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2015-02-08 10:52 UTC by Morse
Modified: 2015-03-26 16:05 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
telepathy: Use the 'simple' variant of the UI when creating an account (1.78 KB, patch)
2015-03-26 16:04 UTC, Debarshi Ray
committed Details | Review
Ensure that changes in Telepathy URI schemes are reflected immediately (1.70 KB, patch)
2015-03-26 16:04 UTC, Debarshi Ray
committed Details | Review

Description Morse 2015-02-08 10:52:17 UTC
1. Create a new SIP account from goa
2. check the "use for external calls" checkbox
3. apply the changes
4. re-open the account properties, the checkbox is unchecked

You can check or uncheck it from the empathy-accounts, but the checkbox in goa will remain unchecked regardless.

Probably relaited: SIP accounts are not synchronized between empathy-accounts and goa. If you create an account in goa, empathy-accounts will import it, but not vise-versa.
Comment 1 Debarshi Ray 2015-03-26 16:04:08 UTC
Created attachment 300364 [details] [review]
telepathy: Use the 'simple' variant of the UI when creating an account
Comment 2 Debarshi Ray 2015-03-26 16:04:36 UTC
Created attachment 300365 [details] [review]
Ensure that changes in Telepathy URI schemes are reflected immediately