telepathy: Use the 'simple' variant of the UI when creating an account

The non-simple UI variant is not well-tested when it comes to creating
new accounts, because empathy uses it only for editing the connection
parameters once the account has been created. eg., the URI scheme
association is not set if the account supports SASL and has a password,
which is probably true for most accounts. This means that the state of
the "Use this account to call landlines and mobile phones" checkbox is
not stored for SIP accounts.

Let's mimic empathy and avoid this pitfalls.

https://bugzilla.gnome.org/show_bug.cgi?id=744165